подправил strings и dimens (были только в night теме)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Nasa Material</string>
+    <string name="default_hint">Поиск в википедии</string>
+    <string name="default_text">что такое Android</string>
+    <string name="default_chips_text">Default Chips</string>
 </resources>
