--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="default_hint">Поиск в википедии</string>
     <string name="default_text">что такое Android</string>
     <string name="default_chips_text">Default Chips</string>
+    <string name="chips_today">Сегодня</string>
+    <string name="chips_yesterday">Вчера</string>
 </resources>
