--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="choice_three">Третий</string>
     <string name="noname_text">Безымянный чипс</string>
     <string name="click_here">Для отображения Чипсов нажмите сюда</string>
+    <string name="clouds_hills_trees">Облака холмы деревья пейзаж</string>
 </resources>
