добавил новый вид ViewHolder для RecyclerActivity, подправил верстку RecyclerActivity и существующих ViewHolder

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="item_view_header">Заметка</string>
     <string name="item_view_body">Инфо</string>
     <string name="item_edit_header">Писать тут</string>
+    <string name="item_header_text">Заголовок</string>
 </resources>
