--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,16 +24,16 @@
     <string name="item_view_body">Инфо</string>
     <string name="item_edit_header">Писать тут</string>
     <string name="item_header_text">Заголовок</string>
-    <string name="big_text">Был прекрасный июльский день, один из тех дней, которые случаются только тогда,
+    <string name="big_text">Был прекрасный июльский день,\nодин из тех дней,\nкоторые случаются только тогда,
         когда погода установилась надолго. С самого раннего утра небо ясно; утренняя заря не пылает пожаром:
-        она разливается кротким румянцем. Солнце — не огнистое, не раскаленное, как во время знойной засухи, не
+        \nона разливается кротким румянцем.\nСолнце — не огнистое, не раскаленное, как во время знойной засухи, не
         тускло-багровое, как перед бурей, но светлое и приветно лучезарное — мирно всплывает под узкой и длинной тучкой,
         свежо просияет и погрузится в лиловый ее туман. Верхний, тонкий край растянутого облачка засверкает змейками;
         блеск их подобен блеску кованого серебра. Но вот опять хлынули играющие лучи, — и весело и величаво, словно взлетая,
         поднимается могучее светило. Около полудня обыкновенно появляется множество круглых высоких облаков, золотисто-серых,
         с нежными белыми краями. Подобно островам, разбросанным по бесконечно разлившейся реке, обтекающей их глубоко прозрачными
         рукавами ровной синевы, они почти не трогаются с места; далее, к небосклону, они сдвигаются, теснятся, синевы между ними уже
-        не видать; но сами они так же лазурны, как небо: они все насквозь проникнуты светом и теплотой. Цвет небосклона,
+        не видать; но сами они так же лазурны, как небо:\nони все насквозь проникнуты светом и теплотой.\nЦвет небосклона,
         легкий, бледно-лиловый, не изменяется во весь день и кругом одинаков; нигде не темнеет, не густеет гроза; разве кое-где
         протянутся сверху вниз голубоватые полосы: то сеется едва заметный дождь. К вечеру эти облака исчезают; последние из них,
         черноватые и неопределенные, как дым, ложатся розовыми клубами напротив заходящего солнца; на месте, где оно закатилось так
